[package]
name = "binder"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
] }
tokio = { version = "1.*", features = ["full"] }
lapin = "4.1"
serde_json = "1.0"
color-eyre = "0.6.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
tokio-stream = "0.1.18"
serde = { version = "1.0.228", features = ["derive"] }
