[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
reqwest = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.9", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
